# checkpoint-mcp-on-aws-agentcore

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
chkpmcpaws/: __init__.py  _hosting_server.py  agent.py  awsutil.py  bridge.py  build.py  cli.py  cognito.py  config.py  creds.py  destroy.py  doctor.py  gaia.py  guardrail.py  hosting.py  lakera.py  mcpcheck.py  memory.py  models.py  ui.py  verify.py
collateral/: Check-Point-MCP-Agent.postman_collection.json
docs/: guide.html
docs/iam/: deployer-policy.sample.json
docs/img/: render-pdfs.sh
docs/img/console/: README.md
docs/scenarios/: ai-guardrail-design.md  ai-guardrail-runbook.md  go-live-and-operations.md  invoke-from-anywhere.md  local-mcp-probe.md  mcp-tools-on-agentcore.md
scripts/: build.py  build.sh  deploy_all.py  mcp_probe.mjs  teardown.py  teardown.sh  teardown_all.py  verify.py
tests/: conftest.py  test_agent.py  test_awsutil.py  test_cli.py  test_cognito_domain.py  test_config.py  test_creds.py  test_doctor.py  test_gaia.py  test_hosting.py  test_lakera.py  test_mcpcheck.py  test_memory.py  test_models.py  test_static.py  test_tls.py  test_ui.py
